Fixxed url image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         .container {
             background-image: linear-gradient(rgba(245, 219, 19, 1), rgba(242, 184, 7, 1));
-            padding-bottom: 120px;
+            height: 100vh;
         }
 
         .heading {
@@ -186,7 +186,7 @@
     <div class="container">
         <div class="heading">
             <div class="head1">
-                <img src="../pokethumbnail/img/Logo.png" alt="poke">
+                <img src="./img/Logo.png" alt="poke">
             </div>
             <div class="head2">
                 <div>
@@ -208,14 +208,14 @@
             </div>
             <div class="cover-image">
                 <div class="picture">
-                    <img class="clouds" src="../pokethumbnail/img/Clouds.png" alt="clouds">
-                    <img class="blackball" src="../pokethumbnail/img/PokeBall1.png" alt="bosng dden">
-                    <img class="pika" src="../pokethumbnail/img/Pikachu.png" alt="pika">
+                    <img class="clouds" src="./img/Clouds.png" alt="clouds">
+                    <img class="blackball" src="./img/PokeBall1.png" alt="bosng dden">
+                    <img class="pika" src="./img/Pikachu.png" alt="pika">
                     <div class="original-ball">
-                        <img class="core" src="../pokethumbnail/img/core.png" alt="loi">
-                        <img class="red" src="../pokethumbnail/img/cover top.png" alt="do">
-                        <img class="white" src="../pokethumbnail/img/cover bottom.png" alt="trang">
-                        <img class="knob" src="../pokethumbnail/img/circle.png" alt="hinhtron">
+                        <img class="core" src="./img/core.png" alt="loi">
+                        <img class="red" src="./img/cover top.png" alt="do">
+                        <img class="white" src="./img/cover bottom.png" alt="trang">
+                        <img class="knob" src="./img/circle.png" alt="hinhtron">
                     </div>
                 </div>
             </div>
